objects/kugo2p__Shipment__c.object
<CustomObject>
    <description>Kugamon - Main object for Shipments. A Shipment is auto created when an Order is Released.</description>
    <fields>
        <fullName>kugo2p__Carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier</label>
        <referenceTo>kugo2p__Carrier__c</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__ContactShipping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Changing Contact Shipping update shipment Ship To Address fields with the Contact Shipping Other Address. If no Contact Shipping, Ship To Address reflects that of the Order.</inlineHelpText>
        <label>Contact Shipping</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Shipments (Contact Shipping)</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__DateEstimatedDelivery__c</fullName>
        <label>Date Estimated Delivery</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__Lines__c</fullName>
        <label>Shipment Line Count</label>
        <summaryForeignKey>kugo2p__ShipmentLine__c.kugo2p__Shipment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>kugo2p__Note__c</fullName>
        <inlineHelpText>Displays on the Packing Slip Document</inlineHelpText>
        <label>Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>kugo2p__Packages__c</fullName>
        <label>Total Shipment Count</label>
        <summarizedField>kugo2p__ShipmentLine__c.kugo2p__Packages__c</summarizedField>
        <summaryForeignKey>kugo2p__ShipmentLine__c.kugo2p__Shipment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>kugo2p__RecordStatus__c</fullName>
        <defaultValue>&quot;Scheduled&quot;</defaultValue>
        <label>Record Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__SalesOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Number</label>
        <referenceTo>kugo2p__SalesOrder__c</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__ShipToCity__c</fullName>
        <label>Ship To City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__ShipToCountry__c</fullName>
        <label>Ship To Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__ShipToStateProvince__c</fullName>
        <label>Ship To State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__ShipToStreetLong__c</fullName>
        <description>A longer version of the original ShipToStreet__c field.</description>
        <label>Ship To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>kugo2p__ShipToZipPostalCode__c</fullName>
        <label>Ship To Zip/Postal Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__ShipmentDate__c</fullName>
        <label>Shipment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__ShippingCost__c</fullName>
        <label>Shipping Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__Status__c</fullName>
        <formula>kugo2p__RecordStatus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__TrackThisShipment__c</fullName>
        <formula>IF(
  kugo2p__Carrier__r.Name == &quot;USPS&quot;,
  HYPERLINK(&apos;http://trkcnfrm1.smi.usps.com/PTSInternetWeb/InterLabelInquiry.do?origTrackNum=&apos; &amp; kugo2p__TrackingNumber__c, &quot;Track with USPS&quot;, &quot;_blank&quot;),
  IF(
    kugo2p__Carrier__r.Name == &quot;UPS&quot;,
    HYPERLINK(&apos;http://wwwapps.ups.com/WebTracking/track?track=yes&amp;trackNums=&apos; &amp; kugo2p__TrackingNumber__c, &quot;Track with UPS&quot;, &quot;_blank&quot;),
    IF(
      kugo2p__Carrier__r.Name == &quot;FedEx&quot;,
      HYPERLINK(&apos;https://www.fedex.com/fedextrack/?trknbr=&apos; &amp; kugo2p__TrackingNumber__c, &quot;Track with FedEx&quot;, &quot;_blank&quot;),
      IF(
        kugo2p__Carrier__r.Name == &quot;DHL&quot;,
        HYPERLINK(&apos;http://www.dhl.com/content/g0/en/express/tracking.shtml?brand=DHL&amp;AWB=&apos; &amp; kugo2p__TrackingNumber__c, &quot;Track with DHL&quot;, &quot;_blank&quot;),
        &quot;&quot;
      )
    )
  )
)</formula>
        <label>Track this Shipment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warehouse</label>
        <referenceTo>kugo2p__Warehouse__c</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Shipment</label>
    <listViews>
        <fullName>kugo2p__All</fullName>
        <columns>NAME</columns>
        <columns>kugo2p__ShipmentDate__c</columns>
        <columns>kugo2p__Lines__c</columns>
        <columns>kugo2p__Status__c</columns>
        <columns>kugo2p__Carrier__c</columns>
        <columns>kugo2p__Warehouse__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>kugo2p__Scheduled</fullName>
        <columns>NAME</columns>
        <columns>kugo2p__ShipmentDate__c</columns>
        <columns>kugo2p__Lines__c</columns>
        <columns>kugo2p__RecordStatus__c</columns>
        <columns>kugo2p__Carrier__c</columns>
        <columns>kugo2p__Warehouse__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>kugo2p__RecordStatus__c</field>
            <operation>equals</operation>
            <value>Scheduled</value>
        </filters>
        <label>Scheduled</label>
    </listViews>
    <nameField>
        <displayFormat>SHP-{0000000}</displayFormat>
        <label>Shipment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>